# notion_api_wrapper

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  requirements.txt  setup.cfg
.github/workflows/: main.yml
data/: initial_database.json  initial_database_data.json
potion/: client.py  constants.py  utilities.py
potion/management/: manager.py  parser.py  resource_access.py
potion/utilities/: constants.py  type_alias.py  utilities.py
scripts/: create_mock_data.py
tests/: conftest.py  test_client.py  test_utilities.py  utilities.py
tests/test_management/: test_manager.py  test_parser.py  test_resource_access.py
tests/test_utilities/: test_utilities.py
