[metadata]
name = potion
version = 0.0.1
description = Python API for Notion (Unofficial)
long_description = file: README.md
keywords = notion, notion-api
license = MIT License
url = https://github.com/pallavbakshi/notion_api
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
